@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-22T16:09:22Z",
-  "count_outdated" : 1642,
-  "uniques_outdated" : 100,
+  "timestamp" : "2022-06-24T08:09:46Z",
+  "count_outdated" : 1644,
+  "uniques_outdated" : 101,
   "count" : 1690,
   "uniques" : 105,
   "views" : [
-    {
-      "timestamp": "2022-06-10T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-11T00:00:00Z",
       "count": 1,
