@@ -1,12 +1,7 @@
 {
-  "count": 48,
+  "count": 46,
   "uniques": 1,
   "views": [
-    {
-      "timestamp": "2022-06-10T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-06-11T00:00:00Z",
       "count": 1,
